Updating logo references

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	
 	<div id="side">
 		<div id="logo">
-			<img src="assets/vaner-homepage.svg">
+			<img src="assets/vaner-white.svg">
 		</div>
 		<p>under construction &#9888</p>
 	</div>
