Social media icons

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<title>under construction &#8604 vaner.org</title>
 	<link rel="stylesheet" href="style.css">
-	<link rel="stylesheet" href="fonts/moderniz.css">
+	<link rel="stylesheet" href="fonts/fonts.css">
 </head>
 
 <body>
@@ -13,7 +13,21 @@
 		<div id="logo">
 			<img src="assets/vaner-white.svg">
 		</div>
-		<p>under construction &#9888</p>
+		<div id="construction">
+			<p>This website is currently under construction.</p>
+		</div>
+		<div id="social-media-banner">
+			<div id="social-media-icon">
+				<a href="https://x.com/vanerorg"><img src="assets/x.svg"></a>
+			</div>
+			<div id="social-media-icon">
+				<a href="https://bsky.app/profile/vaner.org"><img src="assets/bluesky.svg"></a>
+			</div>
+			<div id="social-media-icon">
+				<a href="https://github.com/vaner-org"><img src="assets/github.svg"></a>
+			</div>
+			<!-- <p>copyright*2025</p> -->
+		</div>
 	</div>
 </body>
 
